# nerf-libtorch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: dependencies.cmake
src/: CMakeLists.txt  train.cpp  utils.h  val.cpp
src/nerf/: CMakeLists.txt  dataset.cpp  dataset.h  logger.cpp  logger.h  nerf.cpp  nerf.h  positional_encoding.cpp  positional_encoding.h  radiance_field.cpp  radiance_field.h  ray.cpp  ray.h  stdafx.h  volume_rendering.cpp  volume_rendering.h
src/nerf/utils/: class.h  debug.h  image.cpp  image.h  math.h  utils.h
